--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>links</title>
+	<title>page</title>
 	<link rel="stylesheet" href="style/layout.css" />
 </head>
 <body>	
