--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<base target="_blank">
 	<title>page</title>
 	<link rel="stylesheet" href="style/layout.css" />
 </head>
