--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<base target="_blank">
 	<title>page</title>
 	<link rel="stylesheet" href="style/layout.css" />
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+	<link rel="bookmark" href="./favicon.ico" type="image/x-icon" />
 </head>
 <body>	
 </body>
